@@ -368,6 +368,19 @@ static const canon_cap_t canon_model_capabilities[] =
     NULL,
     NULL
   },
+  { /* Canon S520 */
+    "S520", 3,
+    842, 17*72,
+    10, 10, 15, 15,
+    &canon_MULTIPASS_MP170_slotlist,
+    CANON_CAP_STD0|CANON_CAP_I|CANON_CAP_p,0,control_cmd_BJC_i6100,
+    &canon_S520_modelist,
+    &canon_BJC_S520_paperlist,
+    NULL,
+    NULL,
+    NULL,
+    NULL
+  },
   { /* Canon  BJ 30   *//* heads: BC-10 */
     "30", 1,
     9.5*72, 14*72,
