@@ -266,6 +266,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
      - Canon inkjet printers:
 
        Canon   BJC S330   (EXPERIMENTAL)
+       Canon   BJC S520   (EXPERIMENTAL)
        Canon PIXMA i50    (EXPERIMENTAL)
        Canon PIXMA i70    (EXPERIMENTAL)
        Canon PIXMA i250   (EXPERIMENTAL)
